--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -47,7 +47,18 @@
             background-position: center;
             height: 20vh;
             padding-left: 50px;
-
         }
+
     }
+}
+ @media screen and (min-width: 1024px){
+  #portrait {
+    margin-left: 300px !important;
+  }
+}
+
+ @media screen and (max-width: 200px){
+  .h1 {
+    font-size: rem-calc(20) !important;
+  }
 }
