--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -436,6 +436,11 @@ textarea {
 
 @media screen and (min-width: 1024px) {
   #portrait {
-    margin-left: 350px !important;
+    margin-left: 300px !important;
+  }
+}
+@media screen and (max-width: 200px) {
+  .h1 {
+    font-size: 1.25rem !important;
   }
 }
