--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -53,6 +53,12 @@
 }
  @media screen and (min-width: 1024px){
   #portrait {
-    margin-left: 350px !important;
+    margin-left: 300px !important;
+  }
+}
+
+ @media screen and (max-width: 200px){
+  .h1 {
+    font-size: rem-calc(20) !important;
   }
 }
