--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -1,13 +1,38 @@
 /* =============
     Hero 
 ============= */
-#hero{
-    background-image: url('../img/hero/hero.jpg');
+
+#landing-section {
+  display: flex;
+  flex-direction: column;
+  @include md {
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    padding-left: 3rem;
+  }
+  #hero {
+    background-image: url("../img/hero/hero.jpg");
     background-position: center;
     background-size: cover;
     height: 360px;
 
     @include md {
-        height: 683px;
+      height: 683px;
+      width: 1000px;
     }
+  }
+  #history-first {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    padding-top: 2rem;
+
+    @include md {
+      position: relative;
+      padding-right: 3rem;
+      justify-content: flex-start;
+      text-align: right;
+    }
+  }
 }
