--- a/dev/scss/sections/_history.scss
+++ b/dev/scss/sections/_history.scss
@@ -1,137 +1,145 @@
 /* =============
     History
 ============= */
-#history{
-    display: grid;
-    grid-template-columns: 16px auto 16px;
-    grid-template-areas: ". history .";
-    padding: 60px 0;
+#history {
+  display: grid;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". history .";
+  padding: 60px 0;
 
-    @include lg{
-        grid-template-columns: auto 60% auto;
-        padding: 100px 0;
-    }
+  @include lg {
+    grid-template-columns: auto 60% auto;
+    padding: 100px 0;
+  }
 
-    @include xl{
-        grid-template-columns: auto 800px auto;
-    }
-    >div{
-        grid-area: history;
+  @include xl {
+    grid-template-columns: auto 1000px auto;
+  }
+  > div {
+    grid-area: history;
 
-        #history-first {
-            text-align: center;
+    #history-first {
+      text-align: center;
 
-            @include md {
-                display: grid;
-                grid-template-areas: ". history-first .";
-                grid-template-columns: 10% auto 10%;
-            }
+      @include md {
+        display: grid;
+        grid-template-areas: ". history-first .";
+        grid-template-columns: 10% auto 10%;
+      }
 
-            >div {
-                @include md {
-                    grid-area: history-first;
-                }
-
-                h1 {
-                    color: $yellow;
-                    font-family: 'Comfortaa', cursive;
-                    font-size: rem-calc(48);
-                    font-weight: 700;
-                    line-height: rem-calc(46);
-                    margin: 40px 0 30px;
-
-                    @include md {
-                        font-size: rem-calc(55);
-                        line-height: rem-calc(56);
-                        margin-bottom: 34px;
-                    }
-
-                    @include lg {
-                        font-size: rem-calc(66);
-                    }
-
-                    span {
-                        display: block;
-                        font-size: rem-calc(31);
-
-                        @include md {
-                            font-size: rem-calc(42);
-                        }
-
-                        @include lg {
-                            font-size: rem-calc(54);
-                        }
-                    }
-                }
-
-                h4 {
-                    font-size: rem-calc(17);
-                    font-weight: 400;
-                }
-            }
+      > div {
+        @include md {
+          grid-area: history-first;
         }
 
-        #history-middle {
-            @include lg {
-                display: grid;
-                grid-template-areas: ". history-middle .";
-                grid-template-columns: 10% auto 10%;
-            }
+        h1 {
+          color: $yellow;
+          font-family: "Comfortaa", cursive;
+          font-size: rem-calc(48);
+          font-weight: 700;
+          line-height: rem-calc(46);
+          margin: 40px 0 30px;
 
-            >div {
-                @include lg {
-                    grid-area: history-middle;
-                }
+          @include md {
+            font-size: rem-calc(55);
+            line-height: rem-calc(56);
+            margin-bottom: 34px;
+          }
 
-                p {
-                    font-size: rem-calc(18);
-                    font-weight: 600;
-                    line-height: rem-calc(22);
-                    margin-top: 25px;
-                    text-align: justify;
+          @include lg {
+            font-size: rem-calc(66);
+          }
 
-                    @include md {
-                        line-height: rem-calc(26);
-                        margin-top: 34px;
-                    }
-                }
-            }
-        }
+          span {
+            display: block;
+            font-size: rem-calc(31);
 
-        #history-last {
             @include md {
-                display: grid;
-                grid-template-areas: ". history-last .";
-                grid-template-columns: 10% auto 10%;
+              font-size: rem-calc(42);
             }
 
             @include lg {
-                grid-template-columns: 15% auto 15%;
+              font-size: rem-calc(54);
             }
-
-            >div {
-                @include md {
-                    grid-area: history-last;
-                }
-
-                h3 {
-                    font-size: rem-calc(16);
-                    margin-top: 25px;
-
-                    @include md {
-                        margin-top: 80px;
-                    }
-
-                    @include lg {
-                        margin-top: 100px;
-                    }
-                }
-
-                p {
-                    line-height: rem-calc(22);
-                    text-align: justify;
-                }
-            }
+          }
         }
+
+        h4 {
+          font-size: rem-calc(17);
+          font-weight: 400;
+        }
+      }
     }
+
+    #history-middle {
+      @include lg {
+        display: grid;
+        grid-template-areas: ". history-middle .";
+        grid-template-columns: 0.1% auto 0.1%;
+      }
+
+      > div {
+        @include lg {
+          grid-area: history-middle;
+        }
+
+        p {
+          font-size: rem-calc(18);
+          font-weight: 600;
+          line-height: rem-calc(22);
+          margin-top: 25px;
+          text-align: justify;
+          color: #151515;
+
+          @include md {
+            line-height: rem-calc(38);
+            font-size: rem-calc(34);
+            margin-top: 34px;
+          }
+        }
+      }
+    }
+
+    #history-last {
+      @include md {
+        display: grid;
+        grid-template-areas: ". history-last .";
+        grid-template-columns: 10% auto 10%;
+      }
+
+      @include lg {
+        grid-template-columns: 0.1% auto 0.1%;
+      }
+
+      > div {
+        @include md {
+          grid-area: history-last;
+        }
+
+        h3 {
+          font-size: rem-calc(16);
+          margin-top: 25px;
+
+          @include md {
+            margin-top: 80px;
+            font-size: rem-calc(38);
+          }
+
+          @include lg {
+            margin-top: 100px;
+          }
+        }
+
+        p {
+          line-height: rem-calc(22);
+          text-align: justify;
+
+          @include md {
+            font-size: rem-calc(34);
+            line-height: rem-calc(34);
+          }
+        }
+      }
+    }
+  }
 }
