--- a/dev/scss/sections/_skills.scss
+++ b/dev/scss/sections/_skills.scss
@@ -1,139 +1,190 @@
 /* =============
     Skills
 ============= */
-#skills{
+#skills {
+  z-index: 10;
 
-    @include xl{
-        display: grid;
-            grid-template-columns: auto 1200px auto;
-            grid-template-areas: ". skills-container .";
+  @include xl {
+    display: grid;
+    grid-template-columns: auto 1200px auto;
+    grid-template-areas: ". skills-container .";
+  }
+
+  > div {
+    @include lg {
+      display: flex;
+      text-align: center;
     }
 
-    
-    >div{
-
-        @include lg{
-            display: grid;
-            grid-template-columns: 40% auto;
-        }
-
-        @include xl{
-            grid-area: skills-container;
-        }
-    
-        aside {
-            background-image: url('../img/skills/robot.jpg');
-            background-position: center;
-            background-size: cover;
-            height: 380px;
-
-            @include md {
-                height: 476px;
-            }
-
-            @include lg {
-                height: auto;
-            }
-        }
-    
-        #skills-content{
-            background-color: $charcoal;
-            color: $white;
-            display: grid;
-            grid-template-columns: 16px auto 16px;
-            grid-template-areas: ". skills .";  
-            padding: 60px 0;
-
-            grid-template-columns: 10px auto 10px;
-            padding: 60px 0;
-
-            @include md {
-                grid-template-columns: 10% auto 10%;
-            }
-
-            @include lg {
-                padding: 25px 0 44px;
-            }
-    
-            
-            >div{
-                grid-area: skills;
-                // border: 1px solid red;
-
-                text-decoration: none;
-                transition: 0.25s;
-
-                h1 {
-                    font-family: 'Comfortaa', cursive;
-                    font-size: rem-calc(21);
-                    line-height: rem-calc(26);
-                    margin-bottom: 35px;
-                }
-
-                p {
-                    font-size: rem-calc(18);
-                    line-height: rem-calc(26);
-
-                    display: inline-block;
-                }
-
-
-                ul {
-                    li {
-                        margin-top: 46px;
-
-                        @include md {
-                            margin-top: 51px;
-                        }
-
-                        .top {
-                            display: flex;
-
-                            h5 {
-                                font-size: rem-calc(18);
-                                font-weight: 400;
-                            }
-
-                            h4 {
-                                font-size: rem-calc(18);
-                                margin-left: auto;
-                            }
-                        }
-
-                        .bottom {
-                            background-color: $black;
-                            height: 9px;
-                            margin-top: 5px;
-                            width: 100%;
-
-                            >div {
-                                background-color: $yellow;
-                                height: 9px;
-                            }
-                        }
-                    }
-
-                    #emotion {
-                        .yellow-bar {
-                            width: 64%;
-                        }
-                    }
-
-                    #learning {
-                        .yellow-bar {
-                            width: 90%;
-                        }
-                    }
-
-                    #math {
-                        .yellow-bar {
-                            width: 95%;
-                        }
-                    }
-                }
-            }
-        }
+    @include xl {
+      grid-area: skills-container;
     }
 
-    
+    aside {
+      background-image: url("../img/skills/robot.jpg");
+      background-position: center;
+      background-size: cover;
+      height: 380px;
+      border-radius: 10px 0 0 10px;
+
+      @include md {
+        height: 476px;
+      }
+
+      @include lg {
+        height: auto;
+        width: 100vw;
+        background-color: red;
+      }
+    }
+
+    #skills-content {
+      border-radius: 0 10px 10px 0;
+      z-index: inherit;
+      background-color: $charcoal;
+      color: $white;
+      display: grid;
+      grid-template-columns: 16px auto 16px;
+      grid-template-areas: ". skills .";
+      padding: 60px 0;
+
+      grid-template-columns: 10px auto 10px;
+
+      @include md {
+        grid-template-columns: 10% auto 10%;
+      }
+
+      @include lg {
+        padding: 25px 0 44px;
+        height: 1000px;
+        display: flex;
+        align-items: center;
+      }
+
+      > div {
+        grid-area: skills;
+        // border: 1px solid red;
+
+        text-decoration: none;
+        transition: 0.25s;
+
+        h1 {
+          font-family: "Comfortaa", cursive;
+          font-size: rem-calc(34);
+          line-height: rem-calc(26);
+          margin-bottom: 35px;
+          text-align: center;
+        }
+
+        p {
+          font-size: rem-calc(24);
+          line-height: rem-calc(28);
+          text-align: left;
+          display: inline-block;
+          padding: 10px 50px;
+
+          @include lg {
+            padding: 10px 50px;
+          }
+        }
+
+        ul {
+          position: relative;
+
+          li {
+            margin-top: 46px;
+            display: flex;
+            flex-direction: column;
+
+            @include md {
+              margin-top: 51px;
+              padding: 10px 75px;
+            }
+
+            .top {
+              display: flex;
+
+              h5 {
+                font-size: rem-calc(30);
+                font-weight: 400;
+              }
+
+              h4 {
+                font-size: rem-calc(30);
+                margin-left: auto;
+              }
+            }
+
+            .bottom {
+              background-color: $black;
+              height: 9px;
+              margin-top: 5px;
+              width: 100%;
+              border-radius: 22px;
+
+              > div {
+                background-color: $yellow;
+                height: 9px;
+              }
+            }
+          }
+
+          #emotion {
+            padding: 0 3rem;
+            .top {
+              display: flex;
+              align-items: center;
+            }
+            .yellow-bar {
+              width: 64%;
+              border-radius: 22px;
+              background: rgb(248, 200, 49);
+              background: linear-gradient(
+                90deg,
+                rgba(248, 200, 49, 1) 47%,
+                rgba(105, 145, 26, 1) 100%
+              );
+            }
+          }
+
+          #learning {
+            padding: 0 3rem;
+            .top {
+              display: flex;
+              align-items: center;
+            }
+            .yellow-bar {
+              width: 90%;
+              border-radius: 22px;
+              background: rgb(248, 200, 49);
+              background: linear-gradient(
+                90deg,
+                rgba(248, 200, 49, 1) 47%,
+                rgba(105, 145, 26, 1) 100%
+              );
+            }
+          }
+
+          #math {
+            padding: 0 3rem;
+            .top {
+              display: flex;
+              align-items: center;
+            }
+            .yellow-bar {
+              width: 95%;
+              height: 11px;
+              border-radius: 22px;
+              background: rgb(248, 200, 49);
+              background: linear-gradient(
+                90deg,
+                rgba(248, 200, 49, 1) 47%,
+                rgba(105, 145, 26, 1) 100%
+              );
+            }
+          }
+        }
+      }
+    }
+  }
 }
