--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -19,8 +19,11 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/scrolling-reveal";
 @import "sections/_hero";
 @import "sections/_history";
 @import "sections/_skills";
 @import "sections/_hero-2";
 @import "sections/_skynet";
+
+
